fixed registry page overflow and responsive  issue

--- a/frontend/src/Pages/login_signup/Login.module.css
+++ b/frontend/src/Pages/login_signup/Login.module.css
@@ -1,8 +1,8 @@
 /* setting up containers here so that box is aligned properly  */
 
 .loginPage {
-  min-width: 100vw;
-  min-height: 100vh;
+  max-width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,8 +23,10 @@
   border: 1px solid var(--color-grey-100);
   display: flex;
   flex-direction: column;
-  min-width: 380px;
+  width: 480px;
   background-color: var(--color-bg);
+
+  transform: scale(0.8);
 }
 
 /* left panel styling */
@@ -131,9 +133,13 @@ form {
   cursor: pointer;
   font-size: 14px;
   text-decoration: none;
-  color: var(--color-primary);
   align-self: flex-end;
 }
+
+.forgotPass a {
+  color: var(--color-primary);
+}
+
 .loginBtn {
   background-color: var(--color-primary);
   color: var(--color-bg);
@@ -215,9 +221,14 @@ form {
   top: 1px;
   animation: spin 0.8s linear infinite;
 }
+
 @media (max-width: 709px) {
   .mobileToggle {
     display: block;
+  }
+
+  .right{
+    min-width: 380px;
   }
 }
 
